@@ -6,7 +6,7 @@ from functools import partial
 from bs4 import BeautifulSoup
 from resources.lib.ui.BrowserBase import BrowserBase
 from resources.lib.ui import database, source_utils, client, control
-from resources.lib import debrid
+from resources.lib.debrid import Debrid
 from resources.lib.indexers.simkl import SIMKLAPI
 from resources.lib.endpoints import anidb
 
@@ -133,7 +133,7 @@ class Sources(BrowserBase):
             else:
                 filtered_list = list_
 
-            cache_list, uncashed_list_ = debrid.torrentCacheCheck(filtered_list)
+            cache_list, uncashed_list_ = Debrid().torrentCacheCheck(filtered_list)
             uncashed_list = [i for i in uncashed_list_ if i['seeders'] != 0]
 
             uncashed_list = sorted(uncashed_list, key=lambda k: k['seeders'], reverse=True)
@@ -163,7 +163,7 @@ class Sources(BrowserBase):
                     unique[key] = source
             else:
                 unique[key] = source
-    
+
         self.cached = []
         self.uncached = []
         for source in unique.values():
